# wasip3-components

./: .gitignore  Cargo.toml  README.md  async-http-echo-component.wasm  async-middleware.wasm  composed.wasm  spin.toml  wasi_snapshot_preview1.proxy.wasm
crates/echo/: Cargo.toml
crates/echo/src/: lib.rs
crates/middleware/: Cargo.toml
crates/middleware/src/: lib.rs
my-app/: Cargo.toml  async-http-echo-component.wasm  spin.toml
my-app/src/: lib.rs
oops/: Cargo.toml  spin.toml
oops/src/: lib.rs
