[package]
name = "oops"
version = "0.0.0"
authors = ["The Wasmtime Project Developers"]
edition = "2021"
rust-version =  "1.82.0"
publish = false
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
anyhow = { version = "1.0.93" , features = ['std'] }
wasi = "0.11.0"
wasi-nn = "0.6.0"
# temporarily use git dep until https://github.com/bytecodealliance/wit-bindgen/pull/1157 is released:
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", features = ['default'] }
wit-bindgen-rt = { git = "https://github.com/bytecodealliance/wit-bindgen", features = ['async'] }
libc = { version = "0.2.112", default-features = true }
getrandom = "0.2.9"
futures = { version = "0.3.27", default-features = false, features = ['alloc'] }
url = { version = "2.3.1" }
sha2 = "0.10.2"
base64 = "0.21.0"
wasip2 = { version = "0.14.0", package = 'wasi' }
once_cell = "1.19.0"
flate2 = "1.0.28"
rand = "0.8"

[lib]
crate-type = ["cdylib"]
